crates/compiler/src/tests/e2e/bad/0051_inherent_method_value_ice/main.gom
struct Adder {
    base: int32,
}

impl Adder {
    fn add(self: Adder, x: int32) -> int32 {
        self.base + x
    }
}

fn main() {
    let a = Adder { base: 10 };
    let result = a.add(5);
    println(result.to_string());
    
    let f = Adder::add;
    let result2 = f(a, 20);
    println(result2.to_string());
}
